--- a/templates/CustomColumnsOverride/apiextensions.k8s.io.v1.crd.yaml
+++ b/templates/CustomColumnsOverride/apiextensions.k8s.io.v1.crd.yaml
@@ -14,7 +14,7 @@ spec:
         {{ include "incloud-web-resources.icon" (dict
             "text" "CRD"
             "title" "crd"
-            "backgroundColor" "#137706ff"
+            "backgroundColor" "#2b9af3"
           )| nindent 8
         }}
         {{ include "incloud-web-resources.factory.linkblock" (dict
