--- a/templates/CustomColumnsOverride/v1.serviceaccounts.yaml
+++ b/templates/CustomColumnsOverride/v1.serviceaccounts.yaml
@@ -14,7 +14,7 @@ spec:
         {{ include "incloud-web-resources.icon" (dict
             "text" "SA"
             "title" "serviceaccount"
-            "backgroundColor" "#40199a"
+            "backgroundColor" "#b48c78ff"
           )| nindent 8
         }}
         {{ include "incloud-web-resources.factory.linkblock" (dict
@@ -34,7 +34,7 @@ spec:
         {{ include "incloud-web-resources.icon" (dict
             "text" "NS"
             "title" "namespace"
-            "backgroundColor" "#1e4f18"
+            "backgroundColor" "#a25792ff"
           )| nindent 8
         }}
         {{ include "incloud-web-resources.factory.linkblock" (dict
@@ -85,7 +85,7 @@ spec:
         {{ include "incloud-web-resources.icon" (dict
             "text" "SA"
             "title" "serviceaccount"
-            "backgroundColor" "#40199a"
+            "backgroundColor" "#b48c78ff"
           )| nindent 8
         }}
         {{ include "incloud-web-resources.factory.linkblock" (dict
