--- a/templates/Breadcrumb/factory/poddisruptionbudget-details.yaml
+++ b/templates/Breadcrumb/factory/poddisruptionbudget-details.yaml
@@ -6,21 +6,8 @@ metadata:
 spec:
   id: "stock-project-factory-poddisruptionbudget-details"
   breadcrumbItems:
-    - key: In-Cloud
-      label: In-Cloud
-      link: "/openapi-ui"
-    - key: clusterList
-      label: "Cluster List"
-      link: "/openapi-ui/clusters"
-    - key: cluster
-      label: "{clusterName}"
-      link: "/openapi-ui/clusters/{clusterName}"
-    - key: namespaces
-      label: "Namespaces"
-    - key: namespace
-      label: "{namespace}"
     - key: poddisruptionbudgets
-      label: "PodDisruptionBudgets"
+      label: "policy/v1/poddisruptionbudgets"
       link: "/openapi-ui/{clusterName}/{namespace}/api-table/policy/v1/poddisruptionbudgets"
     - key: poddisruptionbudget
       label: "{6}"
