--- a/templates/CustomColumnsOverride/apps.v1.statefulsets.yaml
+++ b/templates/CustomColumnsOverride/apps.v1.statefulsets.yaml
@@ -46,7 +46,7 @@ spec:
         {{ include "incloud-web-resources.icon" (dict
             "text" "NS"
             "title" "namespace"
-            "backgroundColor" "#1e4f18"
+            "backgroundColor" "#a25792ff"
           )| nindent 8
         }}
         {{ include "incloud-web-resources.factory.linkblock" (dict
