--- a/templates/CustomColumnsOverride/factory-status-conditions.yaml
+++ b/templates/CustomColumnsOverride/factory-status-conditions.yaml
@@ -13,7 +13,14 @@ spec:
       type: bool
     - jsonPath: .lastTransitionTime
       name: Updated
-      type: string
+      type: factory
+      customProps:
+        disableEventBubbling: true
+        items:
+        {{ include "incloud-web-resources.factory.timeblock" (dict
+          "req" ".lastTransitionTime"
+          ) | nindent 8
+        }}
     - jsonPath: .reason
       name: Reason
       type: string
