--- a/templates/Sidebar/stock-project-factory/argocd-application-details.yaml
+++ b/templates/Sidebar/stock-project-factory/argocd-application-details.yaml
@@ -11,4 +11,6 @@ spec:
       - argocd-applications-sidebar
   menuItems:
     {{ include "incloud-web-resources.sidebar.menu.items.namespaced" . | nindent 4 }}
+  externalKeys:
+    {{ include "incloud-web-resources.sidebar.externalKeys" . | nindent 4 }}
 {{- end }}
