--- a/templates/Sidebar/stock-instance.yaml
+++ b/templates/Sidebar/stock-instance.yaml
@@ -7,6 +7,8 @@ spec:
   id: stock-instance-api-form
   menuItems:
     {{ include "incloud-web-resources.sidebar.menu.items.namespaced" . | nindent 4 }}
+  externalKeys:
+    {{ include "incloud-web-resources.sidebar.externalKeys" . | nindent 4 }}
 
 ---
 apiVersion: front.in-cloud.io/v1alpha1
@@ -17,6 +19,8 @@ spec:
   id: stock-instance-api-table
   menuItems:
     {{ include "incloud-web-resources.sidebar.menu.items.namespaced" . | nindent 4 }}
+  externalKeys:
+    {{ include "incloud-web-resources.sidebar.externalKeys" . | nindent 4 }}
 
 ---
 apiVersion: front.in-cloud.io/v1alpha1
@@ -50,6 +54,8 @@ spec:
       - services
   menuItems:
     {{ include "incloud-web-resources.sidebar.menu.items.namespaced" . | nindent 4 }}
+  externalKeys:
+    {{ include "incloud-web-resources.sidebar.externalKeys" . | nindent 4 }}
 
 ---
 apiVersion: front.in-cloud.io/v1alpha1
@@ -60,3 +66,5 @@ spec:
   id: stock-instance-builtin-table
   menuItems:
     {{ include "incloud-web-resources.sidebar.menu.items.namespaced" . | nindent 4 }}
+  externalKeys:
+    {{ include "incloud-web-resources.sidebar.externalKeys" . | nindent 4 }}
