--- a/templates/Sidebar/stock-project-factory/rolebinding-details.yaml
+++ b/templates/Sidebar/stock-project-factory/rolebinding-details.yaml
@@ -10,3 +10,5 @@ spec:
       - rolebinding-sidebar
   menuItems:
     {{ include "incloud-web-resources.sidebar.menu.items.namespaced" . | nindent 4 }}
+  externalKeys:
+    {{ include "incloud-web-resources.sidebar.externalKeys" . | nindent 4 }}
